// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oembedArticleRoute invalid url 1`] = `
Object {
  "data": "Bad request. Invalid url.",
  "status": 400,
}
`;

exports[`oembedArticleRoute success 1`] = `
Object {
  "data": Object {
    "height": 800,
    "html": "<iframe src=\\"https://ndla-frontend.test.api.ndla.no/article-iframe/nb/urn:resource:1/123\\" frameborder=\\"0\\" />",
    "title": "Resource title",
    "type": "rich",
    "version": "1.0",
    "width": 800,
  },
}
`;

exports[`parseAndMatchUrl 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": "topic:1:55163",
    "resourceId": "1:1682",
    "subjectId": "subject:3",
    "topicId": "topic:1:168398",
  },
  "path": "/subjects/:subjectId/(.*)/:topicId/resource\\\\::resourceId",
  "url": "/subjects/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 2`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": "topic:1:168542",
    "resourceId": "1:168554",
    "subjectId": "subject:3",
    "topicId": "topic:1:173292",
  },
  "path": "/subjects/:subjectId/(.*)/:topicId/resource\\\\::resourceId",
  "url": "/subjects/subject:3/topic:1:168542/topic:1:173292/resource:1:168554",
}
`;

exports[`parseAndMatchUrl 3`] = `
Object {
  "isExact": true,
  "params": Object {
    "0": "topic:1:55163",
    "lang": "nn",
    "resourceId": "1:1682",
    "subjectId": "subject:3",
    "topicId": "topic:1:168398",
  },
  "path": "/:lang/subjects/:subjectId/(.*)/:topicId/resource\\\\::resourceId",
  "url": "/nn/subjects/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;
